--- a/front_end/style.css
+++ b/front_end/style.css
@@ -229,16 +229,17 @@ body{
 }
 
 .pessoas {
+	text-align: center;	
+}
+
+.pessoas h5{
 	font-weight: bold;
-	font-size: 15pt;
-	
+	font-size: 15.3pt;
 }
 
 .pessoas img{
 	height: 100pt;
-	
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
-
-
-
-
