--- a/front_end/style.css
+++ b/front_end/style.css
@@ -32,6 +32,7 @@ body{
 
 .center img:nth-child(2){
     position: absolute;
+    width: 40%;
     top: 100px;
     left: 60%;
     transform: translate(-50%, -50%);
