--- a/front_end/style.sass
+++ b/front_end/style.sass
@@ -111,8 +111,8 @@ body
 
 .cadastro
     border: 2px solid $white
-    color: white
-    border-radius: 30px
+        radius: 30px
+    color: $white
     padding: 10px
     background: none
     font-weight: bold
@@ -314,7 +314,7 @@ body
     outline: none
     font-size: 1rem
     border: 1px solid #040B18
-    border-radius: 8px
+        radius: 8px
 
 
 .bodycadastro form input[type="submit"] 
@@ -329,6 +329,7 @@ body
     color: white
     font-size: 1.1rem
     transition: all .3s ease-in-out
+
 
 .bodycadastro form input[type="submit"]:hover 
     background: $third_color
