--- a/front_end/style.sass
+++ b/front_end/style.sass
@@ -33,58 +33,51 @@ body
     position: relative
 
 
-.center img:nth-child(1)
-    position: absolute
-    width: 12%
-    top: 20px
-    left: $quarter_width
-    background: none
+    img:nth-child(1)
+        position: absolute
+        width: 12%
+        top: 20px
+        left: $quarter_width
+        background: none
+        
+    img:nth-child(2)
+        position: absolute
+        width: 40%
+        top: 100px
+        left: $quarter_width *2.4
+        transform: translate(-50%, -50%)
+        background: none
 
 
-.center img:nth-child(2)
-    position: absolute
-    width: 40%
-    top: 100px
-    left: $quarter_width *2.4
-    transform: translate(-50%, -50%)
-    background: none
+    .restrito
+        position: absolute
+        top: 10px
+        right: 50px
+        transform: translate(-50%, -50%)
+        background: none
+        transition: .5s
 
 
-.center .restrito
-    position: absolute
-    top: 10px
-    right: 50px
-    transform: translate(-50%, -50%)
-    background: none
-    transition: .5s
+        img
+            transition: .5s
 
 
-.center .restrito img
-    transition: .5s
+            :hover
+                transform: scale(1.5)
+                    origin: center center
 
-
-.center .restrito img:hover
-    transform: scale(1.5)
-        origin: center center
-
-
-
+    
 .navbar
     background-color: $red
     text-decoration: none
-
-
-
-
+    
+    *
+        background-color: $red
+        
+        
 .navbar-nav
-    position:relative
-
-
-
-.navbar *
-    background-color: $red
-
-
+    position: relative   
+    
 
 .nav-link
     color: white
@@ -92,21 +85,23 @@ body
     transition: .5s
 
 
-.nav-link:hover
-    color: rgb(199, 199, 199)
-    background-color: rgb(202, 0, 0)
-    font-weight: bold
+    :hover
+        color: rgb(199, 199, 199)
+        background-color: rgb(202, 0, 0)
+        font-weight: bold
 
-
+  
+    
+    
 .navbar-brand
     color: white
     font-weight: bold
     transition: .5s
 
 
-.navbar-brand:hover
-    color: rgb(199, 199, 199)
-    font-weight: bold
+    :hover
+        color: rgb(199, 199, 199)
+        font-weight: bold
 
 
 .cadastro
@@ -120,22 +115,27 @@ body
     right: 20px
 
 
-.cadastro a
-    color: white
-    background: none
+    :hover
+        background-color: rgb(168, 6, 6)
+    a
+        color: white
+        background: none
 
-
-.cadastro:hover
-    background-color: rgb(168, 6, 6)
-
-
-.cadastro a:hover
-    text-decoration: none
-    color: white
+        :hover
+            text-decoration: none
+            color: white
 
 
 .conteudo
     padding: 50px
+
+
+.hot_dog
+    float: left
+    width: 40%
+    
+    img
+        width: 70%
 
 
 .info
@@ -145,25 +145,14 @@ body
         bottom: 0px
     display: table
 
+    h1
+        text-align: center
 
-.hot_dog
-    float: left
-    width: 40%
-
-
-.info h1
-    text-align: center
-
-
-.hot_dog img
-    width: 70%
-
-
-.info .text
-    float: right
-    width: $quarter_width *2.4
-    font-size: 32px
-    padding-right: 80px
+    .text
+        float: right
+        width: $quarter_width *2.4
+        font-size: 32px
+        padding-right: 80px
 
 
 .frase
@@ -174,16 +163,16 @@ body
     overflow: hidden
 
 
-.frase .text
-    margin-top: 100px
-    float: right
-    width: $quarter_width *2
-    font-size: 36px
+    .text
+        margin-top: 100px
+        float: right
+        width: $quarter_width *2
+        font-size: 36px
 
 
-.frase h2
-    font-size: 32px
-    opacity: $quarter_width *2
+    h2
+        font-size: 32px
+        opacity: $quarter_width *2
 
 
 .rodape
@@ -195,69 +184,60 @@ body
     background-color: rgb(230, 0, 0)
     z-index: 10
 
+    *
+        background-color: rgb(230, 0, 0)
+        color: $white
 
-.rodape *
-    background-color: rgb(230, 0, 0)
-    color: $white
+    h2
+        font-size: 18px
+        padding-bottom: 20px
+        color: white
 
+    hr
+        border: 1px solid $white
 
-.rodape h2
-    font-size: 18px
-    padding-bottom: 20px
-    color: $white
-
-
-.rodape hr
-    border: 1px solid $white
-
-
-
-.rodape .toproda
-    display: flex
-    justify-content: space-around
-    margin-bottom: 50px
+    .toproda
+        display: flex
+        justify-content: space-around
+        margin-bottom: 50px
 
 
-.rodape .roda img
-    width: 30px
-    margin:
-        right: 10px
-        left: 10px
-    user-select: none
-    cursor: pointer
-    transition: .3s ease
+    .roda img
+        width: 30px
+        margin:
+            right: 10px
+            left: 10px
+        user-select: none
+        cursor: pointer
+        transition: .3s ease
 
+        :hover
+            transform: scale(1.5)
+            opacity: $quarter_width * 3
 
-.rodape .redes a
-    transition: .3s ease
+    .redes a
+        transition: .3s ease
 
-
-
-.rodape .redes a:hover
-    color: rgb(204, 204, 204)
-
-
-.rodape .roda img:hover
-    transform: scale(1.5)
-    opacity: $quarter_width * 3
+        :hover
+            color: rgb(204, 204, 204)
 
 
 .pessoas 
     text-align: center	
 
 
-.pessoas h5
-    font:
-        weight: bold
-        size: 15.3pt
+    h5
+        font:
+            weight: bold
+            size: 15.3pt
 
 
-.pessoas img
-    height: 100pt
-    display: block
-    margin:
-        left: auto
-        right: auto
+    img
+        height: 100pt
+        display: block
+        margin:
+            left: auto
+            right: auto
 
 
 .bodycadastro 
@@ -269,67 +249,67 @@ body
         size: 100% 100%
 
 
-.bodycadastro h1 
-    font-size: 3rem
-    margin:
-        top: 2rem
-        bottom: .5rem
-    text-align: center
+    h1 
+        font-size: 3rem
+        margin:
+            top: 2rem
+            bottom: .5rem
+        text-align: center
 
 
-.bodycadastro form 
-    display: flex
-    flex-direction: column
-    align-items: center
-    background: $third_color
-    width: 30%
-    text-align: center
-    border-radius: 35px
-    margin: 0 auto
-        top: 15px
-        bottom: 40px
+    form 
+        display: flex
+        flex-direction: column
+        align-items: center
+        background: $third_color
+        width: 30%
+        text-align: center
+        border-radius: 35px
+        margin: 0 auto
+            top: 15px
+            bottom: 40px
 
 
-.bodycadastro form label 
-    font-weight: bold
-    display: flex
-    flex-direction: column
-    margin-left: 0
-    background: $third_color
+        label 
+            font-weight: bold
+            display: flex
+            flex-direction: column
+            margin-left: 0
+            background: $third_color
 
 
-.bodycadastro form label span 
-    font-size: 1.1rem
-    margin-top: 1.5rem
-    text-align: left
-    background: $third_color
+            span 
+                font-size: 1.1rem
+                margin-top: 1.5rem
+                text-align: left
+                background: $third_color
 
 
-.bodycadastro form input 
-    background: rgb(235, 235, 235)
-    width: 300px
-    height: 50px
-    padding: 0 0.5rem
-    margin-top: 1rem
-    outline: none
-    font-size: 1rem
-    border: 1px solid #040B18
-        radius: 8px
+        input 
+            background: rgb(235, 235, 235)
+            width: 300px
+            height: 50px
+            padding: 0 0.5rem
+            margin-top: 1rem
+            outline: none
+            font-size: 1rem
+            border: 1px solid #040B18
+                radius: 8px
 
 
-.bodycadastro form input[type="submit"] 
-    cursor: pointer
-    width: 30%
-    margin:
-        top: 4rem
-        bottom: 4rem
-    border: none
-        radius: 32px
-    background: rgb(255, 50, 0)
-    color: white
-    font-size: 1.1rem
-    transition: all .3s ease-in-out
+            [type="submit"] 
+                cursor: pointer
+                width: 30%
+                margin:
+                    top: 4rem
+                    bottom: 4rem
+                border: none
+                    radius: 32px
+                background: rgb(255, 50, 0)
+                color: white
+                font-size: 1.1rem
+                transition: all .3s ease-in-out
 
 
-.bodycadastro form input[type="submit"]:hover 
-    background: $third_color
+                :hover 
+                    background: $third_color
