--- a/mysite/delphone/templates/delphone/cadastro.html
+++ b/mysite/delphone/templates/delphone/cadastro.html
@@ -26,7 +26,7 @@
                 <img alt="logotipo" src="{% static 'delphone/img/DELPHONE.png' %}">
                 <img alt="DelPhone" src="{% static 'delphone/img/nome_sem_fundo.png' %}"> 
 		<!-- Botão de Login -->
-                <a class="restrito" href="login.html"><img alt="cadeado" style="width: 40px" src="{% static 'delphone/img/cadeado.svg' %}"></a>             
+                <a class="restrito" href="{% template 'delphone/login.html' %}"><img alt="cadeado" style="width: 40px" src="{% static 'delphone/img/cadeado.svg' %}"></a>             
               </div>
             </div>
 		<!-- Barra de navegação -->
