--- a/mysite/delphone/templates/delphone/menu.html
+++ b/mysite/delphone/templates/delphone/menu.html
@@ -1,3 +1,4 @@
+{%load static}
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
@@ -5,14 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>DelPhone</title>
 	<!-- CSS da página -->
-        <link href="front_end/style.css" rel="stylesheet">
+        <link href="{% static 'delphone/style.css' %}" rel="stylesheet">
 	<!-- CSS do Bootstrap -->
-        <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
-        <link rel="sortcut icon" href="img/logotipo.png">
-        <script src="jquery/jquery.min.js"></script>
-        <script src="jquery/popper.min.js"></script>
-        <script src="front_end/interaction.js"></script>
-        <script src="bootstrap/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="{% static 'delphone/bootstrap/bootstrap.min.css' %}">
+        <link rel="sortcut icon" href="{% static 'delphone/img/logotipo.png' %}">
+        <script src="{% static'delphone/jquery/jquery.min.js' %}"></script>
+        <script src="{% static 'delphone/jquery/popper.min.js' %}"></script>
+        <script src="{% static 'delphone/interaction.js' %}"></script>
+        <script src="{% static 'delphone/bootstrap/bootstrap.min.js' %}"></script>
     </head>
 
         <body>
@@ -20,34 +21,34 @@
         <div class="cabecalho">
             <div class="tiles">
               <div class="center">
-                <img alt="logotipo" src="img/DELPHONE.png">
-                <img alt="DelPhone" src="img/nome_sem_fundo.png"> 
+                <img alt="logotipo" src= "{% static 'delphone/img/DELPHONE.png' %}">
+                <img alt="DelPhone" src= "{% static 'delphone/img/nome_sem_fundo.png' %}"> 
 		<!-- Botão de Login -->
-                <a class="restrito" href="login.html"><img alt="cadeado" style="width: 40px" src="img/cadeado.svg"></a>             
+                <a class="restrito" href= "{% static 'delphone/login.html' %}"><img alt="cadeado" style="width: 40px" src= "{% static 'delphone/img/cadeado.svg' %}"></a>             
               </div>
             </div>
 	    <!-- Barra de navegação -->
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="menu.html">MENU</a>
+                <a class="navbar-brand" href="{% static 'delphone/menu.html' %}">MENU</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="como_funcionamos.html">COMO FUNCIONAMOS</a>
+                      <a class="nav-link" href= "{% templates 'delphone/como_funcionamos.html' %}">COMO FUNCIONAMOS</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="faq.html">PERGUNTAS FREQUENTES</a>
+                      <a class="nav-link" href= "{%  templates 'delphone/faq.html' %}" >PERGUNTAS FREQUENTES</a>
                     </li>					
                     <li class="nav-item">
-                      <a class="nav-link" href="sobre_nos.html">SOBRE NÓS</a>
+                      <a class="nav-link" href="{%  templates 'delphone/sobre_nos.html'  %}">SOBRE NÓS</a>
                     </li>					
                     <li class="nav-item">
-                      <a class="nav-link" href="contatos.html">CONTATOS</a>
+                      <a class="nav-link" href="{%  templates 'delphone/contatos.html'  %}">CONTATOS</a>
                     </li>
                     <li class="cadastro">
-                      <a class="nav-link" href="cadastro.html">CADASTRAR</a>
+                      <a class="nav-link" href= "{%  templates'delphone/cadastro.html'  %}">CADASTRAR</a>
                     </li>
                   </ul>
                 </div>
@@ -60,19 +61,19 @@
                 <div id="carrossel1" class="carousel carousel-fade slide col-10" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img class="d-block w-100" src="img/lanche_1.jpg" alt="First slide">
+                        <img class="d-block w-100" src="{% static 'delphone/img/lanche_1.jpg'  %}" alt="First slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="img/lanche_2.jpg" alt="Second slide">
+                        <img class="d-block w-100" src="{% static 'delphone/img/lanche_2.jpg'  %}" alt="Second slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="img/lanche_3.jpg" alt="Third slide">
+                        <img class="d-block w-100" src= "{% static'delphone/img/lanche_3.jpg' %}"  alt="Third slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="img/lanche_4.jpg" alt="Second slide">
+                        <img class="d-block w-100" src="{% static 'delphone/img/lanche_4.jpg'  %}" alt="Second slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="img/lanche_5.jpg" alt="Third slide">
+                        <img class="d-block w-100" src="{% static 'delphone/img/lanche_5.jpg'  %}" alt="Third slide">
                       </div>
                     </div>
                     <a class="carousel-control-prev" href="#carrossel" role="button" data-slide="prev">
@@ -89,7 +90,7 @@
 
         <div class="info space">
             <div class="hot_dog">
-                <img alt="celular" src="img/celular_sem_fundo.png">
+                <img alt="celular" src= "{% static 'delphone/img/celular_sem_fundo.png'  %}">
             </div>
             <div class="text">
               O objetivo desse website é disponibilizar os contatos de serviços de delivery próximos a você. Além disso, você ainda ajuda o comércio local! Sem risco de desatualização e sem taxas de utilização. Simples assim, rápido, fácil e gratuito!</div>
@@ -101,13 +102,13 @@
                 <div id="carrossel2" class="carousel carousel-fade slide col-5" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img class="d-block w-100" src="img/avaliacao_1.png" alt="First slide">
+                        <img class="d-block w-100" src= "{% static 'delphone/img/avaliacao_1.png' %}"  alt="First slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="img/avaliacao_2.png" alt="Second slide">
+                        <img class="d-block w-100" src= "{% static 'delphone/img/avaliacao_2.png'  %}" alt="Second slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="img/avaliacao_3.png" alt="Third slide">
+                        <img class="d-block w-100" src= "{% static 'delphone/img/avaliacao_3.png'  %}" alt="Third slide">
                       </div>
                     </div>
                     <a class="carousel-control-prev" href="#carrossel" role="button" data-slide="prev">
@@ -128,20 +129,20 @@
                 <div class="roda">
 		    <!-- Redes Sociais -->
                     <h2>Redes Sociais</h2>
-                    <img alt="Twitter" src="img/twiter.svg">
-                    <img alt="YouTube" src="img/youtube.svg">
-                    <img alt="Facebook" src="img/facebook.svg">
-                    <img alt="Instagram" src="img/instagram.svg">
+                    <img alt="Twitter" src= "{% static 'delphone/img/twiter.svg'  %}">
+                    <img alt="YouTube" src= "{% static 'delphone/img/youtube.svg'  %}">
+                    <img alt="Facebook" src="{% static 'delphone/img/facebook.svg'  %}">
+                    <img alt="Instagram" src="{% static 'delphone/img/instagram.svg'  %}">
                 </div>
                 <div class="roda">
 		    <!-- Navegação -->
                     <nav class="redes">
                       <h2>Navegação</h2>
-                        <a href="menu.html">Menu</a><br>
-			<a href="como_funcionamos.html">Como funcionamos</a><br>
-                        <a href="faq.html">Perguntas frequentes</a><br>
-                        <a href="sobre_nos.html">Sobre nós</a><br>
-                        <a href="contatos.html">Contatos</a><br>
+                        <a href="{%  templates  'delphone/menu.html'  %}">Menu</a><br>
+			<a href= "{%  templates 'delphone/como_funcionamos.html'  %}">Como funcionamos</a><br>
+                        <a href="{%  templates 'delphone/faq.html'  %}">Perguntas frequentes</a><br>
+                        <a href="{%  templates 'delphone/sobre_nos.html'  %}">Sobre nós</a><br>
+                        <a href="{%  templates 'delphone/contatos.html'  %}">Contatos</a><br>
                     </nav>
                 </div>
             </div>
