--- a/mysite/delphone/templates/delphone/login.html
+++ b/mysite/delphone/templates/delphone/login.html
@@ -16,20 +16,19 @@
         <script src="{% static 'delphone/interaction.js' %}"></script>
         <script src="{% static 'delphone/bootstrap/bootstrap.min.js' %}"></script>
     </head>
-
+	
     <body class="bodycadastro">
-
-        <!-- Cabeçalho -->
+	<!-- Cabeçalho -->
         <div class="cabecalho">
             <div class="tiles">
               <div class="center">
                 <img alt="logotipo" src="{% static 'delphone/img/DELPHONE.png' %}">
-                <img alt="DelPhone" src="{% static 'delphone/img/nome_sem_fundo.png' %}"> 
 		<!-- Botão de Login -->
-                <a class="restrito" href="{% templatess 'delphone/login.html' %}"><img alt="cadeado" style="width: 40px" src="{% static 'delphone/img/cadeado.svg' %}"></a>             
+                <img alt="DelPhone" src="{% static 'delphone/img/nome_sem_fundo.png' %}"> 
+                <a class="restrito" href="{% templates 'delphone/login.html' %}"><img alt="cadeado" style="width: 40px" src="{% static 'delphone/img/cadeado.svg' %}"></a>             
               </div>
             </div>
-		<!-- Barra de navegação -->
+	    <!-- Barra de navegação -->
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="{% templates 'delphone/menu.html' %}">MENU</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,48 +57,26 @@
         </div>
         
         <div>
-            <h1 class="titulo">Cadastro de Empresas</h1>
+            <h1 class="titulo">Acesso Restrito</h1>
             <p id="subtitulo">Complete com suas informações</p>
             <br>
         </div>
-
-	<!-- Formulário de Cadastro -->
+	    
+	<!-- Formulário de login -->
         <form>
-            <label for="name">
-                <span>Nome da Empresa</span>
-                <input type="text" id="name" name="name">
-            </label>
-
             <label for="email">
                 <span>Email</span>
                 <input type="email" id="email" name="email">
             </label>
 
-            <label for="phone">
-              <span>Celular: (com DDD)</span>
-              <input type="tel" id="phone" name="phone" placeholder="(12) 34567-8912" pattern="([0-9]{2})[0-9]{5}-[0-9]{4}" required>
+            <label for="password">
+                <span>Senha</span>
+                <input type="password" id="password" name="password">
             </label>
-            
-            <label for="enderecoempresa">
-              <span>Endereço da Empresa</span>
-              <input type="text" id="enderecoempresa" name="enderecoempresa" placeholder="Rua e n°">
-            </label>
-
-            <label for="horariodefuncionamento">
-              <span>Horário de Funcionamento</span>
-              <input type="text" id="horariodefuncionamento" name="horariodefuncionamento" placeholder="Ex.: 12:34 - 23:45">
-            </label>
-
-            <label for="tipodeempresa">
-              <span>Setor</span>
-              <input type="text" id="tipodeempresa" name="tipodeempresa" placeholder="Ex.: Alimentação ou Vestiário.">
-            </label>
-
-            <input type="submit" value="Cadastrar" id="button">
-
+            <input type="submit" value="Entrar" id="button">
         </form>
 	    
-	<!-- Rodapé -->
+        <!-- Rodapé -->
         <div class="rodape space">
             <div class="toproda">
                 <div class="roda">
@@ -111,19 +88,20 @@
                     <img alt="Instagram" src="{% static 'delphone/img/instagram.svg' %}">
                 </div>
                 <div class="roda">
-		    <!-- Navegação -->
                     <nav class="redes">
+	 	      <!-- Navegação -->
                       <h2>Navegação</h2>
                         <a href="{% templates 'delphone/menu.html' %}">Menu</a><br>
 			                  <a href="{% templates 'delphone/como_funcionamos.html' %}">Como funcionamos</a><br>
                         <a href="{% templates 'delphone/faq.html' %}">Perguntas frequentes</a><br>
-                        <a href="{% templates 'delphone/sobre_nos.html' %}">Sobre nós</a><br>
+                        <a href="{% templates 'delphone/sobre_nos.html' %}">Sobre nós</a><br>					
                         <a href="{% templates 'delphone/contatos.html' %}">Contatos</a><br>
                     </nav>
                 </div>
             </div>
     
             <hr>
+		
 	    <!-- Copyright -->
             <div class="final">
                 @ 2021 DelPhone
