--- a/mysite/delphone/templates/delphone/menu.html
+++ b/mysite/delphone/templates/delphone/menu.html
@@ -1,4 +1,4 @@
-{%load static}
+{%load static%}
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
@@ -10,7 +10,7 @@
 	<!-- CSS do Bootstrap -->
         <link rel="stylesheet" href="{% static 'delphone/bootstrap/bootstrap.min.css' %}">
         <link rel="sortcut icon" href="{% static 'delphone/img/logotipo.png' %}">
-        <script src="{% static'delphone/jquery/jquery.min.js' %}"></script>
+        <script src="{% static 'delphone/jquery/jquery.min.js' %}"></script>
         <script src="{% static 'delphone/jquery/popper.min.js' %}"></script>
         <script src="{% static 'delphone/interaction.js' %}"></script>
         <script src="{% static 'delphone/bootstrap/bootstrap.min.js' %}"></script>
@@ -36,19 +36,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href= "{% templates 'delphone/como_funcionamos.html' %}">COMO FUNCIONAMOS</a>
+                      <a class="nav-link" href= "{% url 'delphone/como_funcionamos.html' %}">COMO FUNCIONAMOS</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href= "{%  templates 'delphone/faq.html' %}" >PERGUNTAS FREQUENTES</a>
+                      <a class="nav-link" href= "{%  url 'delphone/faq.html' %}" >PERGUNTAS FREQUENTES</a>
                     </li>					
                     <li class="nav-item">
-                      <a class="nav-link" href="{%  templates 'delphone/sobre_nos.html'  %}">SOBRE NÓS</a>
+                      <a class="nav-link" href="{%  url 'delphone/sobre_nos.html'  %}">SOBRE NÓS</a>
                     </li>					
                     <li class="nav-item">
-                      <a class="nav-link" href="{%  templates 'delphone/contatos.html'  %}">CONTATOS</a>
+                      <a class="nav-link" href="{%  url 'delphone/contatos.html'  %}">CONTATOS</a>
                     </li>
                     <li class="cadastro">
-                      <a class="nav-link" href= "{%  templates'delphone/cadastro.html'  %}">CADASTRAR</a>
+                      <a class="nav-link" href= "{%  url 'delphone/cadastro.html'  %}">CADASTRAR</a>
                     </li>
                   </ul>
                 </div>
@@ -67,7 +67,7 @@
                         <img class="d-block w-100" src="{% static 'delphone/img/lanche_2.jpg'  %}" alt="Second slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src= "{% static'delphone/img/lanche_3.jpg' %}"  alt="Third slide">
+                        <img class="d-block w-100" src= "{% static 'delphone/img/lanche_3.jpg' %}"  alt="Third slide">
                       </div>
                       <div class="carousel-item">
                         <img class="d-block w-100" src="{% static 'delphone/img/lanche_4.jpg'  %}" alt="Second slide">
@@ -138,11 +138,11 @@
 		    <!-- Navegação -->
                     <nav class="redes">
                       <h2>Navegação</h2>
-                        <a href="{%  templates  'delphone/menu.html'  %}">Menu</a><br>
-			<a href= "{%  templates 'delphone/como_funcionamos.html'  %}">Como funcionamos</a><br>
-                        <a href="{%  templates 'delphone/faq.html'  %}">Perguntas frequentes</a><br>
-                        <a href="{%  templates 'delphone/sobre_nos.html'  %}">Sobre nós</a><br>
-                        <a href="{%  templates 'delphone/contatos.html'  %}">Contatos</a><br>
+                        <a href="{%  url  'delphone/menu.html'  %}">Menu</a><br>
+			<a href= "{%  url 'delphone/como_funcionamos.html'  %}">Como funcionamos</a><br>
+                        <a href="{%  url 'delphone/faq.html'  %}">Perguntas frequentes</a><br>
+                        <a href="{%  url 'delphone/sobre_nos.html'  %}">Sobre nós</a><br>
+                        <a href="{%  url 'delphone/contatos.html'  %}">Contatos</a><br>
                     </nav>
                 </div>
             </div>
