--- a/mysite/delphone/templates/delphone/como_funcionamos.html
+++ b/mysite/delphone/templates/delphone/como_funcionamos.html
@@ -25,31 +25,31 @@
                 <img alt="logotipo" src="{% static 'delphone/img/DELPHONE.png' %}">
                 <img alt="DelPhone" src="{% static 'delphone/img/nome_sem_fundo.png' %}"> 
 		<!-- Botão de Login -->
-                <a class="restrito" href="{% templates 'delphone/login.html' %}"><img alt="cadeado" style="width: 40px" src="img/cadeado.svg"></a>             
+                <a class="restrito" href="{% url 'delphone/login.html' %}"><img alt="cadeado" style="width: 40px" src="img/cadeado.svg"></a>             
               </div>
             </div>
 	    <!-- Barra de navegação -->
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="{% templates 'delphone/menu.html' %}">MENU</a>
+                <a class="navbar-brand" href="{% url 'delphone/menu.html' %}">MENU</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="{% templates 'delphone/como_funcionamos.html' %}">COMO FUNCIONAMOS</a>
+                      <a class="nav-link" href="{% url 'delphone/como_funcionamos.html' %}">COMO FUNCIONAMOS</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{% templates 'delphone/faq.html' %}">PERGUNTAS FREQUENTES</a>
+                      <a class="nav-link" href="{% url 'delphone/faq.html' %}">PERGUNTAS FREQUENTES</a>
                     </li>					
                     <li class="nav-item">
-                      <a class="nav-link" href="{% templates 'delphone/sobre_nos.html' %}">SOBRE NÓS</a>
+                      <a class="nav-link" href="{% url 'delphone/sobre_nos.html' %}">SOBRE NÓS</a>
                     </li>					
                     <li class="nav-item">
-                      <a class="nav-link" href="{% templates 'delphone/contatos.html' %}">CONTATOS</a>
+                      <a class="nav-link" href="{% url 'delphone/contatos.html' %}">CONTATOS</a>
                     </li>
                     <li class="cadastro">
-                      <a class="nav-link" href="{% templates 'delphone/cadastro.html' %}">CADASTRAR</a>
+                      <a class="nav-link" href="{% url 'delphone/cadastro.html' %}">CADASTRAR</a>
                     </li>
                   </ul>
                 </div>
@@ -88,11 +88,11 @@
 		    <!-- Navegação -->
                     <nav class="redes">
                       <h2>Navegação</h2>
-                        <a href="{% templates 'menu.html' %}">Menu</a><br>
-			                  <a href="{% templates 'como_funcionamos.html' %}">Como funcionamos</a><br>
-                        <a href="{% templates 'faq.html' %}">Perguntas frequentes</a><br>
-                        <a href="{% templates 'sobre_nos.html' %}">Sobre nós</a><br>
-                        <a href="{% templates 'contatos.html' %}">Contatos</a><br>
+                        <a href="{% url 'menu.html' %}">Menu</a><br>
+			                  <a href="{% url 'como_funcionamos.html' %}">Como funcionamos</a><br>
+                        <a href="{% url 'faq.html' %}">Perguntas frequentes</a><br>
+                        <a href="{% url 'sobre_nos.html' %}">Sobre nós</a><br>
+                        <a href="{% url 'contatos.html' %}">Contatos</a><br>
                     </nav>
                 </div>
             </div>
