add base_generic to html files

--- a/mysite/delphone/templates/delphone/contatos.html
+++ b/mysite/delphone/templates/delphone/contatos.html
@@ -1,101 +1,13 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>DelPhone</title>
-	<!-- CSS da página -->
-        <link href="{% templates 'delphone/front_end/style.css' %}" rel="stylesheet">
-	<!-- CSS do Bootstrap -->
-        <link rel="stylesheet" href="{% templates 'delphone/bootstrap/bootstrap.min.css' %}">
-        <link rel="sortcut icon" href="{% templates 'delphone/img/logotipo.png' %}">
-        <script src="{% static 'delphone/jquery/jquery.min.js' %}"></script>
-        <script src="{% static 'delphone/jquery/popper.min.js' %}"></script>
-        <script src="{% static 'delphone/front_end/interaction.js' %}"></script>
-        <script src="{% static 'delphone/bootstrap/bootstrap.min.js' %}"></script>
-    </head>
+{% extends "delphone/base_generic.html" %}
 
-    <body class="bodycadastro">
+{% load static %}
 
-        <!-- Cabeçalho -->
-        <div class="cabecalho">
-            <div class="tiles">
-              <div class="center">
-                <img alt="logotipo" src="{% static 'delphone/img/DELPHONE.png' %}">
-                <img alt="DelPhone" src="{% static 'delphone/img/nome_sem_fundo.png' %}"> 
-		<!-- Botão de Login -->
-                <a class="restrito" href="{% templates 'delphone/login.html' %}"><img alt="cadeado" style="width: 40px" src="{% static 'delphone/img/cadeado.svg"></a>             
-              </div>
-            </div>
-	    <!-- Barra de navegação -->
-            <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="{% templates 'delphone/menu.html' %}">MENU</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% templates 'delphone/como_funcionamos.html' %}">COMO FUNCIONAMOS</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% templates 'delphone/faq.html' %}">PERGUNTAS FREQUENTES</a>
-                    </li>					
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% templates 'delphone/sobre_nos.html' %}">SOBRE NÓS</a>
-                    </li>					
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% templates 'delphone/contatos.html' %}">CONTATOS</a>
-                    </li>
-                    <li class="cadastro">
-                      <a href="{% templates 'delphone/cadastro.html' %}">CADASTRAR</a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
-        </div>
-		
-        <div class="conteudo">
-		
+{% block content %}       		
+<div class="conteudo">		
 	<h1>Contatos</h1>
 	<br>
 	<!-- Símbolos e formas fictícias de contato -->
 	<p><img src="{% static 'delphone/img/phone.png' %}" height="25" width="25" alt="símbolo telefone"> +55 (11) 91234-5678</p>
-	<p><img src="{% static 'delphone/img/email.png' %}" height="25" width="25" alt="símbolo email"> contato@delphone.com.br</p>
-		
-        </div>
-
-	<!-- Rodapé -->
-        <div class="rodape space">
-            <div class="toproda">
-                <div class="roda">
-		    <!-- Redes Sociais -->
-                    <h2>Redes Sociais</h2>
-                    <img alt="Twitter" src="{% static 'delphone/img/twiter.svg' %}">
-                    <img alt="YouTube" src="{% static 'delphone/img/youtube.svg' %}">
-                    <img alt="Facebook" src="{% static 'delphone/img/facebook.svg' %}">
-                    <img alt="Instagram" src="{% static 'delphone/img/instagram.svg' %}">
-                </div>
-                <div class="roda">
-		    <!-- Navegação -->
-                    <nav class="redes">
-                      <h2>Navegação</h2>
-                        <a href="{% templates 'delphone/menu.html' %}">Menu</a><br>
-			                  <a href="{% templates 'delphone/como_funcionamos.html' %}">Como funcionamos</a><br>
-                        <a href="{% templates 'delphone/faq.html' %}">Perguntas frequentes</a><br>
-                        <a href="{% templates 'delphone/sobre_nos.html' %}">Sobre nós</a><br>
-                        <a href="{% templates 'delphone/contatos.html' %}">Contatos</a><br>
-                    </nav>
-                </div>
-            </div>
-    
-            <hr>
-	    <!-- Copyright -->
-            <div class="final">
-                @ 2021 DelPhone
-            </div>
-        </div>
-        
-    </body>
-
-</html>
+	<p><img src="{% static 'delphone/img/email.png' %}" height="25" width="25" alt="símbolo email"> contato@delphone.com.br</p>		
+</div>
+{% endblock %}
