--- a/mysite/delphone/templates/delphone/login.html
+++ b/mysite/delphone/templates/delphone/login.html
@@ -1,113 +1,23 @@
+{% extends "delphone/base_generic.html" %}
+
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>DelPhone</title>
-	<!-- CSS da página -->
-        <link href="{% static 'delphone/style.css' %}" rel="stylesheet">
-	<!-- CSS do Bootstrap -->
-        <link rel="stylesheet" href="{% static 'delphone/bootstrap/bootstrap.min.css' %}">
-        <link rel="sortcut icon" href="{% static 'delphone/img/logotipo.png' %}">
-        <script src="{% static 'delphone/jquery/jquery.min.js' %}"></script>
-        <script src="{% static 'delphone/jquery/popper.min.js' %}"></script>
-        <script src="{% static 'delphone/interaction.js' %}"></script>
-        <script src="{% static 'delphone/bootstrap/bootstrap.min.js' %}"></script>
-    </head>
-	
-    <body class="bodycadastro">
-	<!-- Cabeçalho -->
-        <div class="cabecalho">
-            <div class="tiles">
-              <div class="center">
-                <img alt="logotipo" src="{% static 'delphone/img/DELPHONE.png' %}">
-		<!-- Botão de Login -->
-                <img alt="DelPhone" src="{% static 'delphone/img/nome_sem_fundo.png' %}"> 
-                <a class="restrito" href="{% url 'delphone/login.html' %}"><img alt="cadeado" style="width: 40px" src="{% static 'delphone/img/cadeado.svg' %}"></a>             
-              </div>
-            </div>
-	    <!-- Barra de navegação -->
-            <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="{% url 'delphone/menu.html' %}">MENU</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url 'delphone/como_funcionamos.html' %}">COMO FUNCIONAMOS</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url 'delphone/faq.html' %}">PERGUNTAS FREQUENTES</a>
-                    </li>					
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url 'delphone/sobre_nos.html' %}">SOBRE NÓS</a>
-                    </li>					
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url 'delphone/contatos.html' %}">CONTATOS</a>
-                    </li>
-                    <li class="cadastro">
-                      <a class="nav-link" href="{% url 'delphone/cadastro.html' %}">CADASTRAR</a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
-        </div>
-        
-        <div>
-            <h1 class="titulo">Acesso Restrito</h1>
-            <p id="subtitulo">Complete com suas informações</p>
-            <br>
-        </div>
-	    
-	<!-- Formulário de login -->
-        <form>
-            <label for="email">
-                <span>Email</span>
-                <input type="email" id="email" name="email">
-            </label>
-
-            <label for="password">
-                <span>Senha</span>
-                <input type="password" id="password" name="password">
-            </label>
-            <input type="submit" value="Entrar" id="button">
-        </form>
-	    
-        <!-- Rodapé -->
-        <div class="rodape space">
-            <div class="toproda">
-                <div class="roda">
-		    <!-- Redes Sociais -->
-                    <h2>Redes Sociais</h2>
-                    <img alt="Twitter" src="{% static 'delphone/img/twiter.svg' %}">
-                    <img alt="YouTube" src="{% static 'delphone/img/youtube.svg' %}">
-                    <img alt="Facebook" src="{% static 'delphone/img/facebook.svg' %}">
-                    <img alt="Instagram" src="{% static 'delphone/img/instagram.svg' %}">
-                </div>
-                <div class="roda">
-                    <nav class="redes">
-	 	      <!-- Navegação -->
-                      <h2>Navegação</h2>
-                        <a href="{% url 'delphone/menu.html' %}">Menu</a><br>
-			                  <a href="{% url 'delphone/como_funcionamos.html' %}">Como funcionamos</a><br>
-                        <a href="{% url 'delphone/faq.html' %}">Perguntas frequentes</a><br>
-                        <a href="{% url 'delphone/sobre_nos.html' %}">Sobre nós</a><br>					
-                        <a href="{% url 'delphone/contatos.html' %}">Contatos</a><br>
-                    </nav>
-                </div>
-            </div>
-    
-            <hr>
-		
-	    <!-- Copyright -->
-            <div class="final">
-                @ 2021 DelPhone
-            </div>
-        </div>
-        
-    </body>
-
-</html>
+{% block content %}         
+<div>
+  <h1 class="titulo">Acesso Restrito</h1>
+  <p id="subtitulo">Complete com suas informações</p>
+  <br>
+</div>	    
+<!-- Formulário de login -->
+<form>
+  <label for="email">
+    <span>Email</span>
+    <input type="email" id="email" name="email">
+  </label>
+  <label for="password">
+    <span>Senha</span>
+    <input type="password" id="password" name="password">
+  </label>
+  <input type="submit" value="Entrar" id="button">
+</form>
+{% endblock %}
