--- a/mysite/delphone/templates/delphone/sobre_nos.html
+++ b/mysite/delphone/templates/delphone/sobre_nos.html
@@ -1,69 +1,11 @@
+{% extends "delphone/base_generic.html" %}
+
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>DelPhone</title>
-	<!-- CSS da página -->
-        <link href="{% static 'delphone/style.css' %}" rel="stylesheet">
-	<!-- CSS do Bootstrap -->
-  <link rel="stylesheet" href="{% static 'delphone/bootstrap/bootstrap.min.css' %}">
-  <link rel="sortcut icon" href="{% static 'delphone/img/logotipo.png' %}">
-  <script src="{% static 'delphone/jquery/jquery.min.js' %}"></script>
-  <script src="{% static 'delphone/jquery/popper.min.js' %}"></script>
-  <script src="{% static 'delphone/interaction.js' %}"></script>
-  <script src="{% static 'delphone/bootstrap/bootstrap.min.js' %}"></script>
-    </head>
-
-    <body>
-	<!-- Cabeçalho -->
-        <div class="cabecalho">
-            <div class="tiles">
-              <div class="center">
-                <img alt="logotipo" src="{% static 'delphone/img/DELPHONE.png' %}">
-                <img alt="DelPhone" src="{% static 'delphone/img/nome_sem_fundo.png' %}"> 
-		<!-- Botão de Login -->
-                <a class="restrito" href="{% url 'delphone/login.html' %}"><img alt="cadeado" style="width: 40px" src="{% static 'delphone/img/cadeado.svg' %}"></a>             
-              </div>
-            </div>
-	    <!-- Barra de navegação -->
-            <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="{% url 'delphone/menu.html' %}">MENU</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url 'delphone/como_funcionamos.html' %}">COMO FUNCIONAMOS</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url 'delphone/faq.html' %}">PERGUNTAS FREQUENTES</a>
-                    </li>					
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url 'delphone/sobre_nos.html' %}">SOBRE NÓS</a>
-                    </li>					
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url 'delphone/contatos.html' %}">CONTATOS</a>
-                    </li>
-                    <li class="cadastro">
-                      <a class="nav-link" href="{% url 'delphone/cadastro.html' %}">CADASTRAR</a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
-        </div>
-        
-        <div class="conteudo">
-      
-	<h1>
-	<center> Sobre nós </center>
-	</h1>
-
-	<article>
-		
+{% block content %}        
+<div class="conteudo">      
+	<h1><center> Sobre nós </center></h1>
+	<article>		
 	<!-- Textos de apresentação -->
 	<h2> Como começamos </h2>		
 		<p>Apesar de o projeto só ter saído do papel por causa da necessidade de apresentar um trabalho para a faculdade, em conversas em rodas de amigos sempre expressamos vontade de buscar soluções para problemas reais, a fim de que possamos oferecer alguma melhoria para a sociedade em que vivemos. A ideia inicial era ajudar estudantes universitários que precisaram sair de suas cidades natais para concluir seus estudos a encontrarem serviços de delivery. Isso por si só já seria difícil, mas ainda queríamos mais: encontrar uma dor comum a todos, que não estivesse restrita a uma região, grupo social ou comunidade.</p>
@@ -124,43 +66,7 @@
 		<li> Ter colaboradores de todas as regiões do país</li>
 		<li> Possuir serviços de delivery cadastrados em todos os estados brasileiros</li>
 		<li> Criar um aplicativo funcional e gratuito</li>
-		</ul>	
- 
-	</article>
-          
-        </div>
-
-	<!-- Rodapé -->
-        <div class="rodape space">
-            <div class="toproda">
-                <div class="roda">
-		    <!-- Redes Sociais -->
-                    <h2>Redes Sociais</h2>
-                    <img alt="Twitter" src="{% static 'delphone/img/twiter.svg' %}">
-                    <img alt="YouTube" src="{% static 'delphone/img/youtube.svg' %}">
-                    <img alt="Facebook" src="{% static 'delphone/img/facebook.svg' %}">
-                    <img alt="Instagram" src="{% static 'delphone/img/instagram.svg' %}">
-                </div>
-                <div class="roda">
-		    <!-- Navegação -->
-                    <nav class="redes">
-                      <h2>Navegação</h2>
-                      <a href="{% url 'delphone/menu.html' %}">Menu</a><br>
-                      <a href="{% url 'delphone/como_funcionamos.html' %}">Como funcionamos</a><br>
-                      <a href="{% url 'delphone/faq.html' %}">Perguntas frequentes</a><br>
-                      <a href="{% url 'delphone/sobre_nos.html' %}">Sobre nós</a><br>
-                      <a href="{% url 'delphone/contatos.html' %}">Contatos</a><br>
-                    </nav>
-                </div>
-            </div>
-    
-            <hr>
-	    <!-- Copyright -->
-            <div class="final">
-                @ 2021 DelPhone
-            </div>
-        </div>
-        
-    </body>
-
-</html>
+		</ul>	 
+	</article>          
+</div>
+{% endblock %}
