--- a/mysite/delphone/templates/delphone/faq.html
+++ b/mysite/delphone/templates/delphone/faq.html
@@ -33,7 +33,7 @@
 	
 		<div class="collapse" id="pergunta2">
   			<div class="card card-body bg-warning">
-    		Sim. Precisamos de alguns dados para garantir a sua segurança e a das empresas cadastradas. Mas não se preocupe, eles não serão divulgadas
+    		Sim. Precisamos de alguns dados para garantir a sua segurança e a das empresas cadastradas. Mas não se preocupe, eles não serão divulgados.
  			 </div>
 		</div>
 		<br>
