adding models to views

--- a/mysite/templates/delphone/menu.html
+++ b/mysite/templates/delphone/menu.html
@@ -36,6 +36,13 @@
     </center>
   </div>
 
+  <!-- <ul>
+    <p>Empresas registradas:</p>
+    {% for empresa in empresas %}
+    <li>{{ empresa|safe }}</li>
+    {% endfor %}
+</ul> -->
+
   <div class="info space">
     <div class="hot_dog">
       <img alt="celular" src= "{% static 'delphone/img/celular_sem_fundo.png'  %}">
