--- a/mysite/templates/delphone/cadastro.html
+++ b/mysite/templates/delphone/cadastro.html
@@ -7,7 +7,11 @@
 <div>
   <h1 class="titulo">Cadastro de Empresas</h1>
   <p id="subtitulo">Complete com suas informações</p>
-  <br>
+</div>
+
+<div>
+    <p> Empresas cadastradas até o momento: {{empresas}}</p>
+    <br>
 </div>
 
 	<!-- Formulário de Cadastro -->
