--- a/mysite/templates/paloma/analysis.html
+++ b/mysite/templates/paloma/analysis.html
@@ -4,16 +4,14 @@
 <head>
     <meta charset="UTF-8"/>
     {% block titulo %}
-    <title>Análise</title>
+    <title>Análise Paloma</title>
     {% endblock %}
 </head>
 
 <body>
     {% block conteudo %}
-    <p>A</p>
-    <a href="#">Voltar ao topo</a>
+    <h1>Análise Exploratória: pergunta de negócio</h1>
     {% endblock %}
 </body>
-
     {% include 'paloma/footer.html' %}
 </html>
