adding views leticia

--- a/mysite/templates/leticia/analysis.html
+++ b/mysite/templates/leticia/analysis.html
@@ -11,7 +11,7 @@
 
 <body>
     {% block conteudo %}
-    <h1>Análise Exploratória: pergunta de negócio</h1>
+    <h1>Pergunta de negócio a ser explorada: </h1>
     {% endblock %}
     {% include 'leticia/rodape.html' %}
     
